compiler/actonc/test/syntaxerrors/err7.golden
Building file test/syntaxerrors/err7.act

ERROR: Error when compiling err7 module: Syntax error

test/syntaxerrors/err7.act:14:6:
   |
14 | f : [a (Eq)] => (a,a) -> bool
   |      ^
unexpected 'a'
expecting type variable (upper case letter optionally followed by digits)

- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - 

